# garou

./: Cargo.toml  notes.md
assets/: map.ldtk
assets/Tiny Swords/Factions/Goblins/Troops/Torch/Red/: Torch_Red.aseprite  Torch_Red.json
assets/Tiny Swords/Factions/Knights/Troops/Archer/Blue/: Archer_Blue.json
assets/Tiny Swords/Factions/Knights/Troops/Dead/: Dead.aseprite  Dead.json
assets/Tiny Swords/Factions/Knights/Troops/Pawn/Blue/: Pawn_Blue.json
assets/Tiny Swords/Factions/Knights/Troops/Warrior/Blue/: Warrior_Blue.json
src/: main.rs  old_one.rs
